# Task2Variant2

./: CMakeLists.txt  Readme.md  format.cpp  format.h  main.cpp
modules/: Modules.cpp  Modules.h
modules/scripts/: module1.cpp  module3.cpp  module4.cpp  module5.cpp  task16.cpp  task23.cpp  task32.cpp  task39.cpp  task9.cpp
